Unit test for mx build commands